--- a/apps/mobile/healthtrack/package.json
+++ b/apps/mobile/healthtrack/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "healthtrack",
+  "name": "mobile",
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
@@ -9,15 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.37",
-    "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.7"
+    "@expo/webpack-config": "^0.12.52",
+    "@healthtrack/api": "file:../../../packages/api",
+    "@healthtrack/ui": "file:../../../packages/ui",
+    "expo": "^52.0.37",
+    "expo-status-bar": "~1.6.0",
+    "react": "18.2.0",
+    "react-native": "^0.72.17",
+    "react-native-web": "^0.19.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
-    "typescript": "^5.3.3"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.14",
+    "typescript": "^5.1.3"
   },
   "private": true
 }
