--- a/apps/mobile/healthtrack/package.json
+++ b/apps/mobile/healthtrack/package.json
@@ -9,18 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^0.12.52",
+    "@expo/webpack-config": "^19.0.1",
     "@healthtrack/api": "file:../../../packages/api",
     "@healthtrack/ui": "file:../../../packages/ui",
     "expo": "^52.0.37",
-    "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
-    "react-native": "^0.72.17",
-    "react-native-web": "^0.19.13"
+    "expo-status-bar": "~2.0.1",
+    "react": "18.3.1",
+    "react-native": "0.76.7",
+    "react-native-web": "0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.14",
+    "@types/react": "~18.3.12",
     "typescript": "^5.1.3"
   },
   "private": true
