--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,24 +1,25 @@
 {
     "name": "backend",
-    "version": "1.0.0",
+    "version": "0.1.0",
     "private": true,
     "scripts": {
-      "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-      "build": "tsc",
-      "start": "node dist/index.js"
+        "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/index.ts",
+        "build": "tsc",
+        "start": "node dist/index.js"
     },
     "dependencies": {
-      "cors": "^2.8.5",
-      "express": "^4.18.2",
-      "jsonwebtoken": "^9.0.0",
-      "dotenv": "^16.0.3"
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.0"
     },
     "devDependencies": {
-      "@types/cors": "^2.8.13",
-      "@types/express": "^4.17.17",
-      "@types/jsonwebtoken": "^9.0.1",
-      "@types/node": "^18.15.11",
-      "ts-node-dev": "^2.0.0",
-      "typescript": "^5.0.4"
+        "@types/cors": "^2.8.13",
+        "@types/express": "^4.17.17",
+        "@types/jsonwebtoken": "^9.0.2",
+        "@types/node": "^18.16.0",
+        "ts-node-dev": "^2.0.0",
+        "tsconfig-paths": "^4.2.0",
+        "typescript": "^5.0.4"
     }
-  }
+}
