--- a/apps/mobile/healthtrack/tsconfig.json
+++ b/apps/mobile/healthtrack/tsconfig.json
@@ -2,5 +2,11 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true
+  },
+  "paths": {
+    "@/*": ["./src/*"],
+    "@healthtrack/api": ["../../packages/api/src"],
+    "@healthtrack/ui": ["../../packages/ui/src"],
+    "@healthtrack/api/types/user" : ["../../packages/api/src/types/user"]
   }
 }
