--- a/apps/mobile/healthtrack/tsconfig.json
+++ b/apps/mobile/healthtrack/tsconfig.json
@@ -4,9 +4,10 @@
     "strict": true,
     "paths": {
       "@/*": ["./src/*"],
+      "@healthtrack/types": ["../../../packages/types/src"],
       "@healthtrack/api": ["../../../packages/api/src"],
       "@healthtrack/ui": ["../../../packages/ui/src"],
-      "@healthtrack/api/types": ["../../../packages/api/src/types"]
+      "@healthtrack/auth": ["../../../packages/auth/src"]
     }
   }
 }
