--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -20,9 +20,10 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
+      "@healthtrack/types": ["../../packages/types/src"],
       "@healthtrack/api": ["../../packages/api/src"],
       "@healthtrack/ui": ["../../packages/ui/src"],
-      "@healthtrack/api/types/user" : ["../../packages/api/src/types/user"]
+      "@healthtrack/auth": ["../../packages/auth/src"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
