--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,19 +1,22 @@
 {
   "name": "@healthtrack/api",
-  "version": "0.0.1",
-  "private": true,
+  "version": "0.1.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "tsc -w"
-  },
-  
-  "devDependencies": {
-    "typescript": "^5.0.0"
+    "dev": "tsc --watch"
   },
   "dependencies": {
     "@healthtrack/types": "*",
-    "axios": "^1.8.1"
+    "axios": "^1.3.4",
+    "react": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.0",
+    "typescript": "^5.0.0"
+  },
+  "peerDependencies": {
+    "react": "^18.0.0"
   }
 }
