--- a/apps/mobile/healthtrack/package.json
+++ b/apps/mobile/healthtrack/package.json
@@ -12,10 +12,16 @@
     "@expo/webpack-config": "^19.0.1",
     "@healthtrack/api": "file:../../../packages/api",
     "@healthtrack/ui": "file:../../../packages/ui",
+    "@react-navigation/bottom-tabs": "^7.2.1",
+    "@react-navigation/native": "^7.0.15",
+    "@react-navigation/native-stack": "^7.2.1",
     "expo": "^52.0.37",
+    "expo-secure-store": "^14.0.1",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.9.1",
     "react-native-web": "0.19.13"
   },
   "devDependencies": {
