--- a/apps/mobile/healthtrack/package.json
+++ b/apps/mobile/healthtrack/package.json
@@ -18,6 +18,7 @@
     "expo": "^52.0.37",
     "expo-secure-store": "^14.0.1",
     "expo-status-bar": "~2.0.1",
+    "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-safe-area-context": "^5.3.0",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.3.12",
+    "tailwindcss": "3.3.2",
     "typescript": "^5.1.3"
   },
   "private": true
