--- a/apps/mobile/healthtrack/package.json
+++ b/apps/mobile/healthtrack/package.json
@@ -28,7 +28,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.3.12",
-    "tailwindcss": "3.3.2",
+    "tailwindcss": "^4.0.12",
     "typescript": "^5.1.3"
   },
   "private": true
