--- a/apps/mobile/healthtrack/package.json
+++ b/apps/mobile/healthtrack/package.json
@@ -15,20 +15,21 @@
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
+    "@rneui/base": "^4.0.0-rc.8",
+    "@rneui/themed": "^4.0.0-rc.8",
     "expo": "^52.0.37",
     "expo-secure-store": "^14.0.1",
     "expo-status-bar": "~2.0.1",
-    "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.3.12",
-    "tailwindcss": "^4.0.12",
     "typescript": "^5.1.3"
   },
   "private": true
