--- a/apps/mobile/healthtrack/package.json
+++ b/apps/mobile/healthtrack/package.json
@@ -17,13 +17,13 @@
     "@react-navigation/native-stack": "^7.2.1",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
-    "expo": "^52.0.37",
+    "expo": "~52.0.38",
     "expo-secure-store": "^14.0.1",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.9.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "0.19.13"
   },
