Victoria! DB compartida!

--- a/apps/mobile/healthtrack/tsconfig.json
+++ b/apps/mobile/healthtrack/tsconfig.json
@@ -4,18 +4,26 @@
     "strict": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "@healthtrack/api": ["../../../packages/api/src"],
-      "@healthtrack/auth": ["../../../packages/auth/src"],
-      "@healthtrack/types": ["../../../packages/types/src"],
-      "@healthtrack/ui": ["../../../packages/ui/src"]
+      "@/*": [
+        "./src/*"
+      ],
+      "@healthtrack/api": [
+        "../../../packages/api/src"
+      ],
+      "@healthtrack/auth": [
+        "../../../packages/auth/src"
+      ],
+      "@healthtrack/types": [
+        "../../../packages/types/src"
+      ],
+      "@healthtrack/ui": [
+        "../../../packages/ui/src"
+      ]
     }
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts",
     "../../../packages/auth/src/**/*.ts",
     "../../../packages/api/src/**/*.ts",
     "../../../packages/types/src/**/*.ts",
